# OSMO

./: .bazelignore  .bazelrc  .gitignore  AGENTS.md  BAZEL_TESTS_SUCCESS.md  BUILD  BUILD.md  BUILD_AND_TEST.md  CONTRIBUTING.md  DEV.md  MODULE.bazel  QUICK_START.md  README.md  RELEASE_NOTES.md  RUN.md  RUN_AND_TEST.md  THIRD_PARTY_NOTICES.txt  authz-sidecar-design.md  codecov.yml  install.sh  plan.md
.agent/: migrate_pydantic.py
.agent/discovered/: quality-gates.json  repo-profile.json
.agent/memory/: long-term.json
.claude/agents/: bazel-ci-analyzer.md  docker-ci-debugger.md  github-actions-expert.md  golang-concurrency-reviewer.md  k8s-golang-expert.md  osmo-workflow-expert.md  python-expert.md
.github/: PULL_REQUEST_TEMPLATE.md  release-notes-prompt.md  release-notes-template.md
.github/ISSUE_TEMPLATE/: 1-bug_report_form.yml  2-feature_request_form.yml  3-documentation_request.yml  4-project-proposal.yml  bug_report_form.yml  documentation_request.yml  feature_request_form.yml
.github/workflows/: BUILD  brev.yml  ci-internal.yaml  ci-public.yaml  ci.yaml  coverage-agent-respond.yaml  coverage-agent.yaml  coverage.yaml  d4-deployment-test.yaml  deployment-test.yaml  docs-ci.yaml  docs-deploy.yaml  draft-release-notes.yaml  ephemeral-env.yaml  flakiness-check.yaml  helm-chart-lint.yaml  label-external.yaml  oetf-kind.yaml  pr-check.yaml  pr-checks.yaml  pr-description-check.yaml  static.yaml  sync-feature-branches.yaml  sync-release-body.yaml  test-token-scopes.yaml  testbot-respond-approve.yaml  testbot-respond.yaml  testbot.yaml  ui-ci.yaml  update-distroless-images.yaml  update-gitlab-submodule.yaml  update-submodule.yaml
.osmo-agent-strategy/: README.md  sources.md
.osmo-agent-strategy/architecture/: ai-native-framework.md  critical-review.md  primitives.md  substrate-design.md
.osmo-agent-strategy/decisions/: decided.md  open-questions.md  stress-test-findings.md
.osmo-agent-strategy/market/: landscape.md  opportunities.md  physical-ai-gaps.md
.osmo-agent-strategy/research/: anti-patterns.md  landscape-analysis.md  prior-art.md  state-of-art.md
.osmo-agent-strategy/vision/: personas.md  thesis.md  why-osmo.md
bzl/: osmo_constants_repo.bzl  py.bzl
bzl/debian_packages/: BUILD  debian_packages.lock.json  debian_packages.yaml  debian_packages_arm64.lock.json  debian_packages_arm64.yaml  dev_builder_debian_packages_arm64.lock.json  dev_builder_debian_packages_arm64.yaml  dev_builder_debian_packages_x86_64.lock.json  dev_builder_debian_packages_x86_64.yaml
bzl/format/: BUILD
bzl/linting/: BUILD  locked_requirements.txt  pylint.py  pylintrc  requirements.txt
bzl/mypy/: BUILD  locked_requirements.txt  mypy.bzl  mypy.ini  requirements.txt
bzl/patches/: BUILD  aspect_rules_py_skip_venv_interpreter.patch  coverage_syspath.patch  rules_python_coverage_empty_data.patch
ci/deployment-test/: azure-overrides.yaml
cookbook/: README.md
cookbook/hil/: README.md  hil_isaac_lab.yaml  install_dependencies.sh
cookbook/mobility_gen/: README.md  cosmos_augmentation.yaml
cookbook/nims/: use_nim.sh  use_nim.yaml
cookbook/nut_pouring/: 01_mimic_generation.yaml  02_hdf5_to_mp4.yaml  03_cosmos_augmentation.yaml  04_mp4_to_hdf5.yaml  05_lerobot_conversion.yaml  06_groot_finetune.yaml  (+1 more)
deployments/: 6_2_upgrade_guide.md  BUILD  README.md
docs/: BUILD  Dockerfile  Makefile  README.md  conf.py  doc_builder.py  docs-requirements.txt  docs_requirements.txt  generate_cli_rst.py  go-integration-testing-proposal.md  index.rst  locked_requirements.txt  lychee.toml  spelling_wordlist.txt
main/: .buildinfo  genindex.html  search.html  searchindex.js
projects/: GITHUB_PROJECT_SETUP.md  PROJ-147-operator-redesign.md  PROJ-206-nvlink-support.md  PROJ-220-dynamic-subpool.md  README.md  _project-design-template.md  authz-sidecar-project.md  configmap-configs.md  configmap-dynamic-config.md  path-scoped-registry-credentials.md
projects/osmo-rust-spike/: Cargo.toml  DEMO.md  DESIGN.md  Dockerfile  build.rs
projects/osmo-rust-spike/deploy/: backend.yaml  control.yaml  crds.yaml  e2e-validate.sh  sample-osmo-jinja-workflow.yaml  sample-ray-workflow.yaml  sample-workflow.yaml
projects/osmo-rust-spike/proto/: cluster_session.proto
projects/osmo-rust-spike/src/: main.rs
proto/: BUILD
releases/: 6.3.0.md  6.3.1.md
run/: BUILD  README.md  check_tools.py  host_ip.py  kind-osmo-cluster-config.yaml  kind_utils.py  load_images.py  localstack.py  print_next_steps.py  push_multiarch_manifests.py  run_command.py  start.py  start_backend.py  start_backend_bazel.py  start_backend_kind.py  start_service.py  start_service_bazel.py  start_service_kind.py  update_configs.py  update_configs_kind.py
skills/: README.md
src/: BUILD  agent_requirements.txt  go.mod  go.sum  locked_requirements.txt  requirements.txt
taskgroup/: Makefile  PROJECT_STRUCTURE.md  README.md  go.mod  go.sum
ui/: .eslintignore  .eslintrc.cjs  .gitignore  .npmrc  .prettierrc.json  BUILD  Dockerfile  README.md  envoy_config.yaml  jest.config.ts  jest.setup.ts  next.config.mjs  next.standalone.js  package-lock.json  package.json  pnpm-lock.yaml  postcss.config.mjs  run_proxy.sh  tailwind.config.mjs  tsconfig.json  ui.bzl
ui-next/: .cursorrules  .dockerignore  .gitignore  ASYNC_FILTER_PLAN.md  ASYNC_FILTER_PLAN_v2.md  CLAUDE.md  DEBUG_INFRASTRUCTURE_AUDIT.md  DRY_AUDIT.md  Dockerfile  README.md  THIRD_PARTY_LICENSES.md  TOKEN_REFRESH_PLAN.md  eslint.config.mjs  global.d.ts  next.config.ts  openapi.json  orval.config.ts  package.json  playwright.config.ts  pnpm-lock.yaml  postcss.config.mjs  profile-design-comparison.md  profile-prototype-v2.html  profile-prototype-v3.html  profile-prototype-v4.html  profile-prototype.html  profile-v3-summary.md  profile-v4-final-notes.md  save-pattern-decision.md  vitest.config.ts
ui-next-design/: DEVELOPER_EXPERIENCE.md  INFORMATION_ARCHITECTURE.md  POOLS_RESOURCES_DESIGN.md  README.md  REDESIGN_PLAN.md  RESOURCES_CROSS_POOL_UX.md  RESOURCES_INTERACTION_FLOWS.md  WORKFLOWS_DESIGN.md  backend_todo.md
workflow_examples/: README.md
workflows/: BUILD  README.md
(+9263 files in other folders)
