[package]
name = "osmo-rust-spike"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1"
chrono = { version = "0.4", features = ["serde"] }
futures = "0.3"
k8s-openapi = { version = "0.23", features = ["v1_30"] }
kube = { version = "0.96", features = ["client", "derive", "runtime", "rustls-tls"] }
prost = "0.13"
schemars = { version = "0.8", features = ["chrono"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "signal", "time"] }
tokio-stream = "0.1"
tonic = { version = "0.12", features = ["transport", "tls", "tls-native-roots"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
http = "1"

[build-dependencies]
tonic-build = "0.12"
